# zifapp

./: .env.example  .gitignore  AGENT_REFACTOR_PLAN.md  API_ARCHITECTURE.md  API_USAGE_EXAMPLES.md  DATABASE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANUAL_OVERRIDES_GUIDE.md  MAPPING_FIX.md  README.md  SALES_MIX_INTEGRATION.md  VOICE_COUNTING_PLAN.md  agent.py  api.py  api_client.py  api_comprehensive.py  app.py  audio_processing.py  bar consumables  bottle_weights.py  cache_manager.py  cogs.py  database.py  draft_beer_map  features.py  gitignore  init  inventory_layout.json  liquor map  mappings.py  margarita flavors  mixed drinks  models.py  policy.py  pyproject.toml  requirements-api.txt  requirements-ui.txt  requirements.txt  run_services.sh  storage.py  (+6 more)
.devcontainer/: devcontainer.json
.streamlit/: config.toml
api/: __init__.py  config.py  dependencies.py  main.py
api/auth/: errors.py  local_auth_service.py
api/middleware/: __init__.py  auth.py  errors.py  (+2 more)
config/: bar_consumables.py  batch_products.py  bottle_beer_map.py  constants  constants.py  liquor_map.py  manual_overrides.py  margarita_flavors.py  mixed_drinks.py  wine map  wine_map.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.ui  docker-compose.dev.yml  docker-compose.yml
docs/: API_FIRST_ARCHITECTURE.md  BATCH_INVENTORY_GUIDE.md  MIGRATION_PLAN.md
frontend/: .env.example  .env.local.example  .vade-report  next.config.ts  package-lock.json  package.json
houndcogs/: __init__.py
sales-mix-api/: README.md  main.py  requirements.txt  run_api.sh  sales_mix_processor.py
smallcogs/: __init__.py
tests/: __init__.py  conftest.py  test_voice_matcher_llm.py
ui/: __init__.py  api_client.py  app.py  config.py
uils/: sales mix parser
utils/: __init__.py  sales_mix_parser.py
(+133 files in other folders)
